tests/baselines/reference/classInheritence.errors.txt
==== tests/cases/compiler/classInheritence.ts (1 errors) ====
    class B extends A { }
    class A extends A { }
          ~
!!! classInheritence.ts(2,7): error TS2100: Type 'A' recursively references itself as a base type.